sfdx-source/main/default/objects/Test_Run_Method_Result__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The test apex class that was ran.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The test apex class that was ran.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>