sfdx-source/main/default/objects/Test_Run_Method_Result__c/fields/Last_Success__c.field-meta.xml
<CustomField>
    <fullName>Last_Success__c</fullName>
    <description>DateTime of last successful run of test</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>DateTime of last successful run of test</inlineHelpText>
    <label>Last Success</label>
    <type>DateTime</type>
</CustomField>