sfdx-source/main/default/objects/Test_Run_Method_Result__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Reason for unit test failure</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason for unit test failure</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>