sfdx-source/main/default/objects/Test_Run_Method_Result__c/fields/Method_Pass__c.field-meta.xml
<CustomField>
    <fullName>Method_Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for if the unit test passed or not</description>
    <inlineHelpText>Flag for if the unit test passed or not</inlineHelpText>
    <label>Method Pass</label>
    <type>Checkbox</type>
</CustomField>