sfdx-source/main/default/objects/Test_Run_Method_Result__c/fields/PreviousMethodResults__c.field-meta.xml
<CustomField>
    <fullName>PreviousMethodResults__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The previous test method result for this class and test method.</description>
    <inlineHelpText>The previous test method result for this class and test method.</inlineHelpText>
    <label>Previous Method Results</label>
    <referenceTo>Test_Run_Method_Result__c</referenceTo>
    <relationshipLabel>Test Run Method Results</relationshipLabel>
    <relationshipName>Test_Run_Method_Results</relationshipName>
    <type>Lookup</type>
</CustomField>